# modelviz

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
docs/: api.md  examples.md  getting-started.md  index.md  threejs.md
examples/: cnn_visualization  index.html  keras_demo.py  modelviz_ai_demo.ipynb  pytorch_cnn_demo.py  pytorch_mlp_demo.py  resnet_demo.py  threejs_demo.py  visualization_demo.py
getting-started/: index.html
modelviz/: __init__.py  visualize.py
modelviz/graph/: __init__.py  builder.py  layer_node.py
modelviz/parsers/: __init__.py  fx_tracer.py  tf_parser.py  torch_parser.py
modelviz/renderers/: __init__.py  graphviz_renderer.py  plotly_renderer.py  threejs_renderer.py
modelviz/utils/: __init__.py  framework_detect.py  grouping.py
output/: cnn_2d.dot  cnn_threejs_3d.html
search/: search_index.json
tests/: __init__.py  test_framework_detect.py  test_grouping.py  test_layer_node.py
threejs/: index.html
