[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelviz"
version = "0.1.0"
description = "Framework-agnostic neural network architecture visualization for Jupyter notebooks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Modelviz Contributors"}
]
keywords = [
    "neural-network",
    "visualization",
    "pytorch",
    "tensorflow",
    "keras",
    "deep-learning",
    "architecture",
    "jupyter"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "graphviz>=0.20",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
tf = ["tensorflow>=2.10"]
all = ["torch>=2.0", "tensorflow>=2.10"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "black>=23.0",
    "isort>=5.12",
    "ruff>=0.1",
    "mypy>=1.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/shreyanshjain05/modelviz"
Documentation = "https://github.com/shreyanshjain05/modelviz#readme"
Issues = "https://github.com/shreyanshjain05/modelviz/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelviz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
timeout = 60

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["modelviz"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["modelviz"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

